ingress/test-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ansible-awx
  annotations:
    kubernetes.io/ingress.class: "nginx-temp"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: ansible-awx.gogox.dev.test
      http:
        paths:
          - backend:
              serviceName: ansible-awx-web-svc
              servicePort: 80
            path: /
